--- a/docs-template/mkdocs.yml
+++ b/docs-template/mkdocs.yml
@@ -7,6 +7,7 @@ site_name: Stock Trading
 
 nav:
     - The Strat: 'index.md'
+    - Swing Trading: 'swingtradingtips.md'
     - Sectors: 'sectors.md'
     - References: 'references.md'
 
