Update docs scripts

--- a/docs-template/mkdocs.yml
+++ b/docs-template/mkdocs.yml
@@ -8,6 +8,7 @@ site_name: Stock Trading
 nav:
     - The Strat: 'index.md'
     - Options: 'options.md'
+    - Scripts: 'scripts.md'
     - Swing Trading: 'swingtradingtips.md'
     - Sectors: 'sectors.md'
     - The Strat Course: 'intro-to-the-strat.md'
