--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 #------------------------------------------------------------------------------
 node_modules
 package-lock.json
+access_token.yml
 .env
 
 
